style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');

:root{
  --bg: #fcfcfc;
  --bg-dark: #333333;
  
  --bg-panel: #ebebeb;
  --bg-panel-dark: #434343;
  
  --color-headings: #0077ff;
  --color-headings-dark: #3664FF;
  
  --color-text: #333333;
  --color-text-dark: #B5B5B5;
}

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  min-height: 100vh;
  width: 100vw;
  overflow: hidden;

  background-color: var(--bg-dark);
  font-family: "Montserrat", sans-serif;
  font-size: 1.6rem;
  color: var(--color-text-dark); 

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.form-section{
  z-index: 99;
}

h1 {
  font-size: 3.2rem;
  text-align: center;
  letter-spacing: 1px;
  color: var(--color-headings-dark);
  margin-bottom: 3.2rem;
}

.success {
  min-width: 300px;
  min-height: 250px;

  margin: 3.2rem auto;
  padding: 3.0rem 3rem;
  border-radius: 0.5rem;
  background-color: var(--bg-panel-dark);

  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.success h2{
  color: var(--color-headings-dark);
  font-size: 2.2rem;
}
.success p:nth-child(1) {
  margin-bottom: 1.6rem;
}
.success p:nth-child(2) {
  margin-bottom: 0.4rem;
}

form {
  overflow: hidden;
  width: 300px;
  
  margin: 3.2rem auto;
  padding: 3.0rem 3rem;
  border-radius: 0.5rem;
  background-color: var(--bg-panel-dark);

  display: flex;
  flex-direction: column;
}

form .input-block {
  margin-bottom: 2.4rem;
  position: relative;
}
form .input-block:last-child{
  margin-bottom: 0;
}

form .input-block input, form .input-block #login-submit {
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;

  width: 100%;
  padding: 1.4rem 0;
  border: none;
  border-bottom: 1px solid var(--color-headings-dark);
  background-color: transparent;
  outline: none;

  color: var(--color-text-dark);
  font-size: 1.6rem;

}

form .input-block #login-submit {
  margin-bottom: 0;
  border-radius: 0.5rem;
  background-color: var(--color-headings-dark);
  color: var(--bg-panel);
}

form .input-block #login-submit:hover{
  cursor: pointer;
  opacity: 0.8;
}

form .input-block input ~ label {
  font-size: 1.4rem;
  color: var(--color-text-dark);

  position: absolute;
  top: 1.6rem;
  left: 0;
  transition: .4s;
}

form .input-block input.active ~ label,
form .input-block input:focus ~ label,
form .input-block input:valid ~ label{
  transform: translateY(-24px);
  font-size: 1.2rem;
  font-weight: bold;
  letter-spacing: 0.1rem;
  color: var(--color-headings-dark);
}

form .input-block #eye {
  position: absolute;
  top: 2.2rem;
  right: 0;

  
  font-size: 2.4rem;
  color: var(--color-text-dark);
  line-height: 0;
  letter-spacing: 0;

  cursor: pointer;
}
form .input-block #eye:active{
  color: var(--color-headings-dark);
}
form .input-block span.error {
  display: flex;
  width: 100%;
  background-color: rgba(255, 55, 55, 0.20);
  font-size: 1.2rem;
  font-weight: bold;
}

form .input-block span.error.active {
  border: 1px solid  rgba(255, 55, 55, 0.40);
  padding: 0.4em;
  border-bottom-left-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

/* ANIMAÇÃO DO FORM */
form {
  animation: fade .5s forwards;
}

@keyframes fade {
  from {
    opacity: 0;
    transform: scale(0.8);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

/* ANIMAÇÃO DOS INPUTS */
form .input-block:nth-child(1) {
  animation-name: move;
  animation-duration: 500ms;
}
form .input-block:nth-child(2) {
  animation-name: move;
  animation-duration: 400ms;
  animation-delay: 100ms;
  animation-fill-mode: backwards;
}
form .input-block:nth-child(3) {
  animation-name: move;
  animation-duration: 400ms;
  animation-delay: 250ms;
  animation-fill-mode: backwards;
}

@keyframes move {
  from {
    opacity: 0;
    transform: translateX(-35%);
  }
  to {
    opacity: 1;
    transform: translateX(0%);
  }
}

/* ANIMAÇÃO AO CLICAR NO SUBMIT DO FORM*/
.form-hide {
  animation-name: down;
  animation-duration: 500ms;
  animation-fill-mode: forwards;
  animation-timing-function: ease-in;
}

@keyframes down {
  from {
    transform: translateY(0);
    opacity: 1;
  } 
  to {
    transform: translateY(100%);
    opacity: 0;
  }
}

.success-show {
  animation-name: upDown;
  animation-duration: 500ms;
  animation-delay: 500ms;
  animation-fill-mode: backwards;
  animation-timing-function: ease-out;
}

@keyframes upDown {
  from {
    transform: translateY(-100%);
    opacity: 0;
  } 
  to {
    transform: translateY(0);
    opacity: 1;
  }
}

/* ANIMAÇÃO DE NEGAÇÃO DO FORM */
form.validate-error {
  animation: nono 250ms linear, fade paused;
  animation-iteration-count: 2;
}

@keyframes nono {
  0%, 100% {
    transform: translateX(0);
  }
  35% {
    transform: translateX(-15%);
  }
  70% {
    transform: translateX(15%);
  }
}

/* QUADRADOS ANIMADOS NO BACKGROUND */
.squares li {
  width: 4rem;
  height: 4rem;
  background-color: rgba(181, 181, 181, 0.2);
  border-radius: 0.4rem;
  display: block;
  position: absolute;
  z-index: -99;

  animation: bgUp 2s infinite;
  animation-direction: alternate;
}

@keyframes bgUp {
  form {
    transform: translateY(0);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  to {
    transform: translateY(-110vh) rotate(960deg);
    opacity: 0;
  }
}

